--- a/ekoterm-org-ember/app/templates/components/hover-products-menu.hbs
+++ b/ekoterm-org-ember/app/templates/components/hover-products-menu.hbs
@@ -5,39 +5,12 @@
         Категории товаров
       </h3>
     </div>
-
     <ul class="sidebar-content">
-      {{#link-to 'index' tagName='li'}}
-        {{link-to 'Котельное оборудование' 'index'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Насосное оборудование' 'contacts'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Радиаторы' 'contacts'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Трубы и фитинги' 'contacts'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Канализация' 'contacts'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Запорная арматура' 'contacts'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Системы теплого пола' 'contacts'}}
-      {{/link-to}}
-
-      {{#link-to 'contacts' tagName='li'}}
-        {{link-to 'Энергия солнца' 'contacts'}}
-      {{/link-to}}
+      {{#each-in categories as |category products|}}
+        <div class="sidebar-item-wrapper">
+          {{sidebar-item category=category products=products}}
+        </div>{{!-- sidebar-item-wrapper --}}
+      {{/each-in}}
     </ul>
   </div>
 </div>
