--- a/ekoterm-org-ember/app/templates/contacts.hbs
+++ b/ekoterm-org-ember/app/templates/contacts.hbs
@@ -1,7 +1,13 @@
 <div class="row" id="moreInfo">
-  <div class="col-xs-12">
+  <div class="col-xs-6">
 
     {{directions-info}}
+
+  </div>{{!-- end col-sm-6 --}}
+
+  <div class="col-xs-6">
+
+    {{map-info}}
 
   </div>{{!-- end col-sm-6 --}}
 </div>{{!-- end moreInfo --}}
