--- a/ekoterm-org-ember/app/templates/footer.hbs
+++ b/ekoterm-org-ember/app/templates/footer.hbs
@@ -3,12 +3,12 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-2">
-        <h6>Copyright &copy; 2016 Dmytro</h6>
+        <h6>Copyright &copy; EkoTERM</h6>
       </div>{{!-- end col-sm-2 --}}
 
       <div class="col-sm-4">
-        <h6>О нас</h6>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt, animi dolore repellat! Sunt magni quasi, recusandae blanditiis fuga, iusto ex, asperiores quos, quaerat deserunt beatae voluptas quisquam? Reprehenderit, eaque.</p>
+        <h6>Контакты</h6>
+        {{contact-options}}
       </div>
 
       <div class="col-sm-2">
@@ -33,7 +33,7 @@
       </div>{{!-- end col-sm-2 --}}
 
       <div class="col-sm-2">
-        <h6>Coded with <span class="glyphicon glyphicon-heart"></span> by Dmytro</h6>
+        <h6>Coded by Dmytro S.</h6>
       </div>{{!-- end col-sm-2 --}}
     </div>{{!-- end row --}}
   </div>{{!-- end container --}}
