--- a/ekoterm-org-ember/app/templates/pricelists.hbs
+++ b/ekoterm-org-ember/app/templates/pricelists.hbs
@@ -1,1 +1,50 @@
+<div class="col-sm-12">
+  <table class="table table-striped-custom">
+    <thead>
+      <tr>
+        <th>Системы наружного водопровода</th>
+        <th></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>Труба полиэтиленовая водопроводная</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Труба полиэтиленовая газовая</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Труба полиэтиленовая техническая</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Труба НПВХ водопроводная</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Терморезисторные детали для сваривания ПЭ труб</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Стыковые детали для сваривания ПЭ труб</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Механические зажимные фитинги Georg Fischer (Швейцария)</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Механические зажимные фитинги Suyap (Турция)</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+      <tr>
+        <td>Переходы полиэтилен-сталь</td>
+        <td><a href="/">Скачать прайс</a></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 {{outlet}}
