--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -24,16 +24,7 @@
       </ul>
 
       <div class="contact-options pull-right">
-        <li>
-          <span class="glyphicon glyphicon glyphicon-earphone"></span>
-          <strong>(0612) 23-456-789</strong>
-        </li>
-        <li>
-          (098) 124-567-321
-        </li>
-        <li>
-          <a href="mailto:ekoterm.zp@ukr.net">ekoterm.zp@ukr.net</a>
-        </li>
+        {{contact-options}}
       </div>
     </div>{{!-- end navbar-collapse --}}
   </div>{{!-- end container --}}
